infra/sg.tf
resource "aws_security_group" "expenseflow_alb" {
  name        = "expenseflow-api-alb"
  description = "Security group for the public api alb"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
